# Code-Trainer-Backend

./: .dockerignore  .env.example  .env.production.example  .gitignore  .pre-commit-config.yaml  CONVENTIONS.md  DEPLOY.md  Makefile  README.md  alembic.ini  pyproject.toml
deploy/: build-runners-prod.sh
docker/: Dockerfile  Dockerfile.prod  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.runners.prod.yml  docker-compose.runners.yml  docker-compose.test.yml
docker/runners/: Dockerfile.cpp  Dockerfile.csharp  Dockerfile.java  Dockerfile.pascal  Dockerfile.python
docker/runners/csharp-template/: Program.cs
languages/: cpp.yml  csharp.yml  java.yml  pascal.yml  python.yml  ruff-student.toml
migrations/: env.py  schema.py
migrations/seeds/: basic_program_catalog.py  basic_program_curriculum_links.py  block_helpers.py  catalog_common.py  course_batch_125_174_catalog.py  course_batch_175_224_catalog.py  course_batch_225_270_catalog.py  course_batch_25_74_catalog.py  course_batch_75_124_catalog.py  input_output_catalog.py  placeholder_capstones_catalog.py  task_catalog_seed.py  tc42_course_catalog_generated.py  tc42_curriculum_links.py
migrations/versions/: a1b2c3d4e5f6_init.py  a8b9c0d1e2_course_batch_75_124.py  b2c3d4e5f6a1_add_tasks.py  b9c0d1e2f3_course_batch_125_174.py  c0d1e2f3a4_course_batch_175_224.py  c3d4e5f6a2b1_auth_and_submissions.py  d1e2f3a4b5_course_batch_225_270.py  d4e5f6a3b4c2_add_task_progress.py  e2f3a4b5c6_placeholder_capstones.py  e5f6a4b5c6d3_add_flowchart_task.py  f3a4b5c6d7_prog_links.py  f6a7b8c9d0e4_add_translation_pattern_task.py  g4h5i6j7k8_multilang_tracks.py  g7h8i9j0k1e5_add_block_reorder_semantic_task.py  h5i6j7k8_expand_tracks_24.py  h6i6j7k8_diversify_lang_tracks.py  h8i9j0k1l2f6_add_flowchart_semantic_task.py  i7j8k9l0_tc42_128_catalog.py  i9j0k1l2m3g7_add_curriculum_progress.py  j0k1l2m3n4h8_add_pattern_snippet_tasks.py  j8k9l0m1_fix_task12_test_cases.py  k1l2m3n4o5i9_add_compiled_language_tasks.py  k9l0m1n2_tc42_sync.py  l0m1n2o3_tc42_test_cases.py  l2m3n4o5p6j0_add_groups_and_assignment_sets.py  m1n2o3p4_tc42_catalog_resync.py  m3n4o5p6q7k1_localize_tasks_ru.py  n2o3p4q5_tc42_fix_13_18.py  n4o5p6q7r8_product_readiness.py  o3p4q5r6_tc42_task13_blocks.py  o5p6q7r8s9_recompute_passed_counts.py  p6q7r8s9t0_submission_input_payload.py  q7r8s9t0u1_block_reorder_multilang.py  r8s9t0u1v2_seed_task_catalog_50.py  s9t0u1v2w3_flowchart_source_code.py  t0u1v2w3x4_flowchart_loop_tasks_fix.py  u1v2w3x4y5_flowchart_full_validation.py  v2w3x4y5z6_flowchart_semantic_tests.py  w3x4y5z6a7_add_write_from_description_task_type.py  x5y6z7a8b9_basic_program_catalog_12.py  (+2 more)
resources/: concepts.yml
scripts/: generate_tc42_catalog.py
src/: cli.py
src/core/: rest.py  settings.py
src/dev/: seed_curriculum_links.py  seed_users.py
src/features/: __init__.py
src/shared/: student_messages.py
src/workers/: execution_worker.py
tests/: conftest.py
tests/e2e/: conftest.py  test_anonymous_security.py  test_api_contract.py  test_health.py  test_rbac_matrix.py
tests/fixtures/: flowchart_sample_tasks.py
tests/helpers/: languages.py  toolchain.py
tests/services/: logger.py
tests/unit/: conftest.py  test_app_smoke.py
(+348 files in other folders)
