[project]
name = "code-trainer-backend"
version = "0.1.0"
description = "Backend API платформы Code Trainer"
authors = [
    { name = "Vlada Maksimova", email = "vladamaximova2003@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "dependency-injector (>=4.48.3,<5.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "fastapi[standard] (>=0.128.0,<0.129.0)",
    "loguru (>=0.7.2,<0.8.0)",
    "sqlalchemy (>=2.0.45,<3.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "greenlet (>=3.1.1,<4.0.0)",
    "alembic (>=1.18.1,<2.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "uvicorn (>=0.40.0,<0.41.0)",
    "typer (>=0.24.1,<0.25.0)",
    "redis (>=5.0.0,<6.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "bcrypt (>=4.2.0,<5.0.0)",
    "tree-sitter-language-pack (>=0.10.0,<0.11.0)",
]

[tool.poetry]
package-mode = false
packages = [{ include = "src" }]

[tool.poetry.scripts]
manage = "src.cli:app"

[tool.poetry.group.dev.dependencies]
mypy = "^1.19.1"
ruff = "^0.14.13"
pre-commit = "^4.5.1"
pytest = "^8.3.2"
pytest-asyncio = "^0.24.0"
pytest-cov = "^6.0.0"
coverage = "^7.13.2"
pre-commit-hooks = "^6.0.0"
black = "^26.1.0"
types-redis = "^4.6.0.20241004"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py312"
exclude = [".venv", "migrations/versions"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "Q"]
ignore = [
    "D100", "D101", "D102", "D103", "D104", "D105", "D106", "D107",
]

fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**" = ["S101"]
"**/router.py" = ["B008"]

[tool.black]
line-length = 120
target-version = ["py312"]
skip-string-normalization = false

[tool.mypy]
python_version = "3.12"
disallow_untyped_defs = true
ignore_missing_imports = false
show_error_codes = true
no_implicit_optional = true
explicit_package_bases = true
mypy_path = "."
packages = ["src"]
exclude = [".venv", "venv", "migrations/versions"]

[[tool.mypy.overrides]]
module = ["redis", "redis.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["yaml", "yaml.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["jwt", "jwt.*", "bcrypt", "bcrypt.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = """
-v
--tb=short
"""
filterwarnings = [
    "ignore::PendingDeprecationWarning",
    "ignore::DeprecationWarning",
    "ignore:Unmanaged access of declarative attribute.*:sqlalchemy.exc.SAWarning",
    "ignore:Couldn't parse.*:coverage.exceptions.CoverageWarning",
]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "session"

[tool.coverage.run]
branch = true
source = ["src"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/migrations/*",
    "*/site-packages/*",
    "*/dependency_injector/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
